[tool.poetry]
name = "photos-cleanup"
version = "0.1.0"
description = ""
authors = ["montyz <monty@codetransform.com>"]

[tool.poetry.dependencies]
python = "^3.8"
osxphotos = "^0.42.15"
returns = "^0.14.0"
pillow = "^7.1.2"
sqlite_utils = "^2.10"
click = "^7.1.2"
sigal = "^2.1"
py2app = "^0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
